--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,6 @@
 @import "~bulma/bulma";
 
+
 p:not(:first-child) {
   padding-top: 1em;
 }
@@ -10,4 +11,11 @@ li {
 
 .has-padding-medium {
 	padding:0.3em;
+}
+
+.navbar {
+	min-height: 100%;
+	background-color: #111111;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%232b5612' fill-opacity='0.2' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+
 }
