--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,12 @@
 @import "~bulma/bulma";
 
+html, body {
+	height: 100%;
+}
+
+#app {
+  min-height: 100%;
+}
 
 p:not(:first-child) {
   padding-top: 1em;
@@ -14,8 +21,7 @@ li {
 }
 
 .navbar {
-	min-height: 100%;
+	top: 0;
+	bottom: 0;
 	background-color: #111111;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%232b5612' fill-opacity='0.2' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-
 }
