--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,7 +1,9 @@
 @import "~bulma/bulma";
 
+
 html, body {
 	height: 100%;
+	color:black;
 }
 
 #app {
@@ -24,4 +26,8 @@ li {
 	top: 0;
 	bottom: 0;
 	background-color: #111111;
+}
+
+aside {
+	position: fixed;
 }
